--- a/frontend/app-vite/package.json
+++ b/frontend/app-vite/package.json
@@ -15,9 +15,11 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "dompurify": "^3.0.5",
     "dropzone": "^6.0.0-beta.2",
     "embla-carousel": "^8.0.0-rc11",
+    "gsap": "^3.12.2",
     "sortablejs": "^1.15.0"
   }
 }
