--- a/frontend/app-vite/package.json
+++ b/frontend/app-vite/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "bootstrap-icons": "^1.10.5",
     "dompurify": "^3.0.5",
     "dropzone": "^6.0.0-beta.2",
     "embla-carousel": "^8.0.0-rc11",
